Changes from jTDS 0.8.1
=========================

07/26/2004 - David Kilzer
 o Made SharedNamedPipe constructor package-private to match SharedSocket
   constructor.

07/26/2004 - Brian Heineman
 o Removed extraneous methods from SharedSocket and SharedNamedPipe.

07/25/2004 - David Kilzer
 o Fixed bug when using instances with named pipes.  ConnectJDBC2 constructor
   was trying to determine the correct serverPort by creating a MSSqlServerInfo
   object, which is not necessary for named pipes.
 o Fixed bad message key in ConnectJDBC2.unpackProperties().  Changed
   "prop.portservertype" to "prop.servertype".

07/25/2004 - Brian Heineman
 o Applied patch [991684] Implement named pipe IPC for SQL Server 6.5; (Thanks
   to David Kilzer <ddkilzer@users.sourceforge.net> for the patch)

07/23/2004 - Brian Heineman
 o Improved ConnectionPoolDataSource exception processing and closed connection
   handling.
 o Applied patch [989791] Workaround for null values in properties; (Thanks to
   Art Gramlich for the original patch)
 o Corrected documentation for the lastUpdateCount connection property.

07/22/2004 - Brian Heineman
 o Added lobBuffer parameter to control the memory used by LOB's.
 o Updated FAQ documentation with new parameter information and TDS protocol
   support.
 o Corrected bug in Blob and Clob truncate() methods that caused a
   NullPointerException to be thrown for disk based LOBs.
 o Corrected bug in TestBase where InputStreams and Readers were not being
   closed.
 o Added test for bug [945462] getResultSet() return null if you use
   scrollable/updatable

07/21/2004 - Brian Heineman
 o Added test for bug [994988] Network error when null is returned via int
   output parm
 o Corrected bug [994916] datetime decoding in TdsData.java; Added tests to
   ensure this functionality continues to work in the future.
 o Added test for bug [983432] Prepared call doesn't work with jTDS 0.8
 o Added test for bug [981958] PreparedStatement doesn't work correctly
